--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -13,6 +13,9 @@ on:
       - 'components/ambient-api-server/**/*.go'
       - 'components/ambient-api-server/go.mod'
       - 'components/ambient-api-server/go.sum'
+      - 'components/ambient-cli/**/*.go'
+      - 'components/ambient-cli/go.mod'
+      - 'components/ambient-cli/go.sum'
       - '.github/workflows/go-lint.yml'
   pull_request:
     branches: [main]
@@ -26,6 +29,9 @@ on:
       - 'components/ambient-api-server/**/*.go'
       - 'components/ambient-api-server/go.mod'
       - 'components/ambient-api-server/go.sum'
+      - 'components/ambient-cli/**/*.go'
+      - 'components/ambient-cli/go.mod'
+      - 'components/ambient-cli/go.sum'
       - '.github/workflows/go-lint.yml'
   workflow_dispatch:
 
@@ -40,6 +46,7 @@ jobs:
       backend: ${{ steps.filter.outputs.backend }}
       operator: ${{ steps.filter.outputs.operator }}
       ambient-api-server: ${{ steps.filter.outputs.ambient-api-server }}
+      ambient-cli: ${{ steps.filter.outputs.ambient-cli }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -61,6 +68,10 @@ jobs:
               - 'components/ambient-api-server/**/*.go'
               - 'components/ambient-api-server/go.mod'
               - 'components/ambient-api-server/go.sum'
+            ambient-cli:
+              - 'components/ambient-cli/**/*.go'
+              - 'components/ambient-cli/go.mod'
+              - 'components/ambient-cli/go.sum'
 
   lint-backend:
     runs-on: ubuntu-latest
@@ -185,15 +196,67 @@ jobs:
           working-directory: components/ambient-api-server
           args: --timeout=5m
 
+  lint-ambient-cli:
+    runs-on: ubuntu-latest
+    needs: detect-go-changes
+    if: needs.detect-go-changes.outputs.ambient-cli == 'true' || github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version-file: 'components/ambient-cli/go.mod'
+          cache-dependency-path: 'components/ambient-cli/go.sum'
+
+      - name: Check gofmt
+        run: |
+          cd components/ambient-cli
+          UNFORMATTED=$(gofmt -l .)
+          if [ -n "$UNFORMATTED" ]; then
+            echo "The following files are not formatted:"
+            echo "$UNFORMATTED"
+            echo ""
+            echo "Run 'gofmt -w .' to format them."
+            exit 1
+          fi
+
+      - name: Run go vet
+        run: |
+          cd components/ambient-cli
+          go vet ./...
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v9
+        with:
+          version: latest
+          working-directory: components/ambient-cli
+          args: --timeout=5m
+
   lint-summary:
     runs-on: ubuntu-latest
-    needs: [detect-go-changes, lint-backend, lint-operator, lint-ambient-api-server]
+    needs: [detect-go-changes, lint-backend, lint-operator, lint-ambient-api-server, lint-ambient-cli]
     if: always()
     steps:
       - name: Check overall status
         run: |
-          if [ "${{ needs.lint-backend.result }}" == "failure" ] || [ "${{ needs.lint-operator.result }}" == "failure" ] || [ "${{ needs.lint-ambient-api-server.result }}" == "failure" ]; then
+          failed=false
+          for result in \
+            "${{ needs.lint-backend.result }}" \
+            "${{ needs.lint-operator.result }}" \
+            "${{ needs.lint-ambient-api-server.result }}" \
+            "${{ needs.lint-ambient-cli.result }}"; do
+            if [ "$result" == "failure" ] || [ "$result" == "cancelled" ]; then
+              failed=true
+            fi
+          done
+          if [ "$failed" == "true" ]; then
             echo "Go linting failed"
+            echo "  lint-backend: ${{ needs.lint-backend.result }}"
+            echo "  lint-operator: ${{ needs.lint-operator.result }}"
+            echo "  lint-ambient-api-server: ${{ needs.lint-ambient-api-server.result }}"
+            echo "  lint-ambient-cli: ${{ needs.lint-ambient-cli.result }}"
             exit 1
           fi
           echo "All Go linting checks passed!"
